styles/styles.css
/* ... */
body {
  font-family: "Poppins", sans-serif;
  background-color: #f3f3f3;
  color: #333;
}

/* icons */
.expense-transaction-icon {
  display: flex;
  justify-content: center;
  font-size: 2.3rem;
  color: #e56372;
  width: 40px;
}

.deposit-transaction-icon {
  display: flex;
  justify-content: center;
  font-size: 2.3rem;
  width: 40px;
  color: #0f9d58;
}

.transfer-transaction-icon {
  display: flex;
  justify-content: center;
  font-size: 2.05rem;
  width: 40px;
  color: #dadee7;
}

.header-container {
  position: fixed;
  top: 0;
  width: 100%;
  height: 175px;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  border-radius: 0 0 20px 20px;
  background-color: #6488e5;
  z-index: 1;
}

.header {
  width: 95%;
  max-width: 500px;
}

.title-wrapper {
  display: flex;
  justify-content: center;
  width: 90%;
}

.title {
  width: 90%;
  color: #fff;
  font-size: 1.5rem;
  margin-bottom: 10px;
  letter-spacing: 1px;
  font-weight: 400;
}

.total-balance-container,
.savings-balance-container {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fff;
  border-radius: 20px;
  height: 85px;
  margin-bottom: -35px;
  box-shadow: rgb(63 61 86) 0px 8px 20px -9px;
}

.total-balance-wrapper,
.savings-balance-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 90%;
}

.cash-available,
.savings-available {
  font-size: 0.7rem;
  color: #9e9e9e;
  margin-top: 5px;
}

.expenses-overview-section {
  display: flex;
  justify-content: center;
}

.expenses-overview-container {
  background-color: #fff;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 95%;
  max-width: 500px;
  height: 185px;
  margin-top: 15px;
}

.expenses-overview-wrapper {
  width: 90%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.expenses-overview-icons-wrapper {
  width: 100%;
}

.expenses-dollar-sign {
  color: #e56372;
  margin-right: 5px;
}

.expense-overview {
  font-size: 0.7rem;
  color: #9e9e9e;
  margin-top: 5px;
}

.expenses-overview-balance {
  color: #e56372;
}

.expenses-overview-icons-list {
  list-style-type: none;
  width: 100%;
  display: flex;
  justify-content: space-around;
  margin-top: 30px;
}

#food-circle {
  width: 70px;
  position: absolute;
}

#shopping-circle {
  width: 70px;
  position: absolute;
  color: #e6e6e6;
}

#transportation-circle {
  width: 70px;
  position: absolute;
}

#household-circle {
  width: 70px;
  position: absolute;
}

.circle-container {
  width: 70px;
  height: 70px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.overview-icon {
  font-size: 30px;
  color: #fff;
  -webkit-text-stroke: 1px #e56372;
  display: flex;
  margin-bottom: px;
}

.food-percent,
.shopping-percent,
.transportation-percent,
.household-percent {
  font-size: 0.8rem;
}

.transactions-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

.transactions-wrapper,
.all-transactions-wrapper {
  width: 95%;
  max-width: 500px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.transactions-label,
.savings-goals-label {
  width: 100%;
  display: flex;
  justify-content: center;
  margin: 20px 0 20px 0;
}

.transactions,
.savings-goals {
  width: 90%;
  color: #9e9e9e;
}

.modal-overlay,
.edit-modal-overlay,
.savings-modal-overlay,
.contribute-modal-overlay {
  left: 0;
  top: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: fixed;
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.4);
}

.modal {
  width: 100%;
  max-width: 500px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #fff;
  border-radius: 20px;
  padding: 10px 0;
  margin-bottom: 60px;
}

.modal-content {
  width: 80%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.expense-deposit-btn {
  width: 100%;
  height: 45px;
  display: flex;
  align-items: center;
  border: 1px solid #6488e5;
  border-radius: 20px;
}

.gray-expense-deposit-btn {
  border: 1px solid #dadee7;
}

.active-expense-btn {
  width: 50%;
  height: 45px;
  border: none;
  border-radius: 20px;
  color: #fff;
  background-color: #6488e5;
}

.gray-btn {
  width: 50%;
  height: 45px;
  border: none;
  border-radius: 20px;
  color: #fff;
  background-color: #dadee7;
}

.inactive-deposit-btn {
  width: 50%;
  height: 45px;
  border: none;
  border-radius: 20px;
  background: none;
}

.inputs-wrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.inputs-label-wrapper {
  display: flex;
  flex-direction: column;
  margin: 5px 0;
}

.input-label {
  margin: 0 0 5px 15px;
}

.form-inputs {
  width: 100%;
  height: 45px;
  border: 1px solid #6488e5;
  border-radius: 20px;
  background: none;
  padding: 0 20px 0 20px;
}

.modal-btn {
  width: 50%;
  height: 45px;
  background-color: #6488e5;
  border: none;
  border-radius: 20px;
}

.submit-btn {
  margin-top: 8px;
}

.add-expense-btn {
  color: #ff7d8c;
  font-size: 1rem;
}

.add-deposit-btn {
  color: #00e300;
  font-size: 1rem;
}

.add-goal-btn {
  color: #fff;
  font-size: 1rem;
}

.confirm-transfer-btn {
  color: #dadee7;
  font-size: 1rem;
}

.cancel-btn {
  border: none;
  background: none;
  color: #333;
  margin-left: 20px;
  font-size: 1rem;
}

.inactive-expense-btn {
  width: 50%;
  height: 45px;
  border: none;
  border-radius: 20px;
  background: none;
}

.active-deposit-btn {
  width: 50%;
  height: 45px;
  border: none;
  border-radius: 20px;
  color: #fff;
  background-color: #6488e5;
}

.transfer-btn-wrapper {
  width: 80%;
  display: flex;
  justify-content: flex-end;
  margin-top: 10px;
}

.transfer-btn {
  background: none;
  border: none;
  color: #6488e5;
}

.active-transfer-btn {
  border-bottom: 1px solid #6488e5;
}
/* ... */

